Fix a footer nav alignment bug

--- a/assetsSource/css/breakpoints/1-base.less
+++ b/assetsSource/css/breakpoints/1-base.less
@@ -238,6 +238,9 @@ ul {
 	&__nav {
 		.spaced(30px);
 	}
+	&__nav-list {
+		.margin(left; 0);
+	}
 	&__logo-link {
 		.centered-block();
 		.size(144px; 120px);
